# MathLib

./: LICENSE  MathLib.sublime-project  MathLib.sublime-workspace  README.md  batFunction.bat  index.js  index.ts  package.json  todolist.todo  todolist.todo.html  tsconfig.json
@type/: MathLib.d.ts  Matrix.d.ts  Mean.d.ts  covariance.d.ts  main.d.ts  product.d.ts  rank.d.ts  statistics.d.ts  vector.d.ts
calculus/: index.js  st.sh
docs/: InterfaceDefines.ts  Mathlib.drawio
pack/: setup.js
statistics/: Covariance.ts  Gaussian_distribution.ts  LeastSquare.ts  Matrix.ts  Mean.ts  Median.ts  QuantilePlot.ts  Summation.ts  T.targert.ts  Variance.ts  factorial.ts  gcd.ts  harmonic.ts  index.ts  product.ts  rank.ts  sigmoid.ts  tree.ts  vector.ts  weigth_variance.ts
statistics/C/: CMakeLists.txt  README.md  factorial.c  factorial.h  gcd.c  gcd.h  index.c  matrix.c  matrix.h  sigmoid.c
statistics/C/include/: BRTree.h  HashMap.h  LLink.h  List.h  Map.h  binTree.h  factorial.h  gcd.h  matrix.h  queue.h  sigmoid.h  stack.h  statistics.h
statistics/C/src/: BRTree.c  HashMap.c  HashMap.h  LLink.c  LLink.h  Link.c  Link.h  List.c  Map.c  binExp.c  binTree.c  binTree.h  factorial.c  gcd.c  matrix.c  matrix.h  queue.c  queue.h  sigmoid.c  sigmoid.h  singleLink.c  singleLink.h  stack.c  statistics.h
statistics/CPP/: README.md
statistics/CS/: README.md
statistics/CS/src/: Complex.cs  Covariance.cs  (+19 more)
statistics/Go/: .editorconfig  README.md  go.mod
statistics/Haxe/: Complex.hx  Matrix.hx  Mean.hx  Rank.hx  Tensor.hx  Test.hx  build.hxml
statistics/JS/: Bayes.js  Gaussian_distribution.js  LeastSquare.js  Matrix.js  Mean.js  Median.js  Permutations.js  QuantilePlot.js  Standard_Deviation.js  Variance.js  factorial.js  gcd.js  harmonic.js  index.js  rank.js  sigmoid.js  tensor.js  vector.js  weigth_variance.js
statistics/Java/: README.md
statistics/Lua/: READEME.md
statistics/TypeScript/: Matrix.ts  Median.ts  Permutations.ts  QuantilePlot.ts  README.md  angule.ts  h.ts  index.ts  powerFactorial.ts  product.ts  rank.ts  tensor.ts  tsconfig.json  vector.ts  weigth-variance.ts
statistics/es6/: Matrix.es6.js  README.md  Vector.es6.js  expetation.es6.js  factorial.es6.js  gcd.es6.js  mean.es6.js
statistics/python/: Gcd.py  Harmonic.py  List.py  Matrix.py  Mean.py  Median.py  README.md  Rnak.py  Summation.py  Vector.py  corrlation.py  sigmoid.py  softmax.py  var.py
test/: gulpfile.js  main.js  test.html
(+80 files in other folders)
